--- a/dashboard-loadbalancer.yml
+++ b/dashboard-loadbalancer.yml
@@ -2,13 +2,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: kubernetes-dashboard-lb
+  name: kubernetes-dashboard
   namespace: kube-system
 spec:
   type: LoadBalancer
   ports:
     - port: 443
       protocol: TCP
-      targetPort: 443
+      targetPort: 8443
   selector:
     k8s-app: kubernetes-dashboard
