--- a/pihole.yaml
+++ b/pihole.yaml
@@ -68,18 +68,16 @@ apiVersion: v1
 metadata:
   name: pihole
 spec:
+  type: LoadBalancer
   ports:
     - port: 80
       targetPort: 80
-      name: pihole-admin
+      protocol: TCP
     - port: 53
       targetPort: 53
       protocol: TCP
-      name: dns-tcp
     - port: 53
       targetPort: 53
       protocol: UDP
-      name: dns-udp
   selector:
     app: pihole
-  type: LoadBalancer
